# tools_c

./: .gitignore  .gitmodules  Allocs.h  Args.h  ArraySize.h  AsyncTask.h  BitCount.h  CheckResult.h  ClockGetTimeWindows.h  Combine.h  Compare.h  CreateArray.h  CurrentTime.h  CutString.h  DefaultRandomEngine.h  DumpMemory.h  Either.h  Endianness.h  Endl.h  ErrorChecks.h  FileCommon.h  FileName.h  InRange.h  Iota.h  Logging.h  LoggingDetail.h  MemberOffset.h  MinMax.h  Numeric.h  Pause.h  PrintArray.h  PrintBacktrace.h  PrintGuru.h  PrintPikachu.h  PtrMagic.h  README.md  Random.h  RandomChance.h  RandomContainers.h  Ratios.h  (+20 more)
tests/cmake/: CMakeLists.txt  rebuild.sh  start.sh
tests/src/: Allocs.cpp  Args.cpp  ArraySize.cpp  BitCount.cpp  Compare.cpp  CreateArray.cpp  CurrentTime.cpp  CutString.cpp  DumpMemory.cpp  Either.cpp  Endianness.cpp  Endl.cpp  ErrorChecks.cpp  FileCommon.cpp  InRange.cpp  Iota.cpp  Logging.cpp  MemberOffset.cpp  MinMax.cpp  Numeric.cpp  PrintArray.cpp  PrintBacktrace.cpp  PtrMagic.cpp  Random.cpp  RandomChance.cpp  RandomContainers.cpp  ReadFile.cpp  ReadFile.txt  Repeat.cpp  Sigaction.cpp  SimpleTimer.cpp  SplitString.cpp  StartsWith.cpp  StringEquals.cpp  StringToInt.cpp  Swap.cpp  TaskScheduler.cpp  TimeCasts.cpp  TimeUtils.cpp  Timer.cpp  (+6 more)
tests/vs/: tools_c_ut.sln  tools_c_ut.vcxproj  tools_c_ut.vcxproj.filters
